--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>8.0.0.Final</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf -->
+		<dependency>
+			<groupId>org.thymeleaf</groupId>
+			<artifactId>thymeleaf</artifactId>
+			<version>3.1.0.RELEASE</version>
+		</dependency>
+
 
 	</dependencies>
 
