Mod:application.properties (email)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,9 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#--------------Mail Properties---------------
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=6ba916348b0a4b
+spring.mail.password=3922debf453b51
+spring.mail.protocol=smtp
