divided folder backend frontend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.mail.port=25
 spring.mail.username=6ba916348b0a4b
 spring.mail.password=3922debf453b51
 spring.mail.protocol=smtp
+
+jwt.expiration.time=90000
