--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,14 @@ spring.jpa.database=MYSQL
 spring.jpa.show-sql=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+###---questa parte è personale e non va committata, nel caso NON ACCETTARE LA MODIFICA SU QUESTO PEZZO---###
 #--------------Mail Properties---------------
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
-spring.mail.username=6ba916348b0a4b
-spring.mail.password=3922debf453b51
+spring.mail.username=a1676e8a8b5a48
+spring.mail.password=c0e03716b2acdd
 spring.mail.protocol=smtp
+####################################
+jwt.expiration.time = 90000
+jwt.public.key=classpath:app.pub
+jwt.private.key=classpath:app.keys
